--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
     "@types/pino-http": "^5.4.0",
