--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "@types/express": "^4.17.11",
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "mongodb": "^3.6.6",
+    "mongodb-memory-server": "^6.9.6",
     "pino": "^6.11.2",
     "pino-http": "^5.5.0",
     "pino-pretty": "^4.7.1",
