--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "target": "ES2020",
         "esModuleInterop": true,
         "module": "CommonJS",
-        "strict": true
+        "strict": true,
+        "skipLibCheck": true
     }
 }
