--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "scripts": {
-    "test": "jest --detectOpenHandles"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
-    "@types/mongodb": "^3.6.12",
-    "@types/node": "^14.14.37",
-    "@types/pino-http": "^5.4.0",
-    "dayjs": "^1.10.4",
-    "express": "^4.17.1",
-    "jest": "^26.6.3",
-    "mongodb": "^3.6.6",
-    "mongodb-memory-server": "^6.9.6",
-    "pino": "^6.11.2",
-    "pino-http": "^5.5.0",
-    "pino-pretty": "^4.7.1",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.4"
-  }
+    "private": true,
+    "scripts": {
+        "start": "ts-node src/main.ts",
+        "test": "jest --detectOpenHandles"
+    },
+    "dependencies": {
+        "@types/express": "^4.17.11",
+        "@types/jest": "^26.0.22",
+        "@types/mongodb": "^3.6.12",
+        "@types/node": "^14.14.37",
+        "@types/pino-http": "^5.4.0",
+        "dayjs": "^1.10.4",
+        "express": "^4.17.1",
+        "jest": "^26.6.3",
+        "mongodb": "^3.6.6",
+        "mongodb-memory-server": "^6.9.6",
+        "pino": "^6.11.2",
+        "pino-http": "^5.5.0",
+        "pino-pretty": "^4.7.1",
+        "ts-jest": "^26.5.4",
+        "typescript": "^4.2.4"
+    }
 }
