--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "start": "ts-node src/main.ts",
-        "test": "jest --detectOpenHandles"
+        "test": "jest"
     },
     "dependencies": {
         "@tfc-chain/adapter": "^1.0.2",
@@ -20,6 +20,7 @@
         "pino-http": "^5.5.0",
         "pino-pretty": "^4.7.1",
         "ts-jest": "^26.5.4",
+        "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
     }
 }
