--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "start": "ts-node src/main.ts",
+        "build": "tsc",
         "test": "jest"
     },
     "dependencies": {
@@ -21,6 +22,7 @@
         "pino-pretty": "^4.7.1",
         "ts-jest": "^26.5.4",
         "ts-node": "^9.1.1",
+        "tsc": "^2.0.3",
         "typescript": "^4.2.4"
     }
 }
