--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "start": "ts-node src/main.ts",
+        "start": "ts-node src/main.ts | pino-pretty",
         "build": "tsc",
         "test": "jest src/"
     },
